# CNN

./: .editorconfig  CMakeLists.txt  README.md
include/: architectures.h  data_format.h  func.h  metrics.h  pipeline.h
src/: batchnorm2d.cpp  cnn.cpp  data_format.cpp  func.cpp  grad_cam.cpp  inference.cpp  pipeline.cpp
